--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <section class="hero-section">
         <div class="container mb-4 pt-4 my-sm-5 pt-sm-4">
             <div class="row">
-                <div class="col-md-6 text-center-sm align-self-center order-md-0 order-1" data-aos="fade-up" data-aos-duration="1000">
+                <div class="col-md-6 text-center-sm align-self-center order-md-0 order-1" data-aos="fade-up" data-aos-duration="750">
                     <h1>Track your Expenses to Save Money</h1>
                     <p>Helps you to organize your income and expenses</p>
                     <div class="row mt-3 mt-md-5 ml-1 justify-content-center justify-content-md-start">
@@ -99,7 +99,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 align-self-center px-5 px-md-3 mb-5 mb-md-0 mt-5 mt-sm-0 order-md-1 order-0" data-aos="fade-down" data-aos-duration="1000">
+                <div class="col-md-6 align-self-center px-5 px-md-3 mb-5 mb-md-0 mt-5 mt-sm-0 order-md-1 order-0" data-aos="fade-down" data-aos-duration="1500">
                     <img src="assets/img/Illustration.png" class="img-fluid" alt="hero">
                 </div>
             </div>
@@ -119,7 +119,7 @@
     <section class="my-5 py-0 py-md-5">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 align-self-center my-3 order-1 order-md-0 text-center-sm" data-aos="fade-right" data-aos-duration="1000">
+                <div class="col-md-6 align-self-center my-3 order-1 order-md-0 text-center-sm" data-aos="fade-up" data-aos-duration="750">
                     <p class="text-muted text-uppercase font-weight-bold">Alwalys online</p>
                     <h2>Real-time support with cloud</h2>
                     <p class="lead text-gray">Tellus lacus morbi sagittis lacus in. Amet nisl at mauris enim accumsan
@@ -134,7 +134,7 @@
                         </svg>
                     </a>
                 </div>
-                <div class="col-md-6 px-4 align-self-center my-3 order-0 order-md-1" data-aos="fade-left" data-aos-duration="1000">
+                <div class="col-md-6 px-4 align-self-center my-3 order-0 order-md-1" data-aos="fade-down" data-aos-duration="1500">
                     <img src="assets/img/Illustrator1.png" class="img-fluid" alt="">
                 </div>
             </div>
@@ -144,10 +144,10 @@
     <section class="my-5 py-0 py-md-5">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 px-4 align-self-center my-3" data-aos="fade-up" data-aos-duration="1000">
+                <div class="col-md-6 px-4 align-self-center my-3" data-aos="fade-up" data-aos-duration="750">
                     <img src="assets/img/Illustrator2.png" class="img-fluid" alt="">
                 </div>
-                <div class="col-md-6 align-self-center my-3 text-center-sm"  data-aos="fade-down" data-aos-duration="1000">
+                <div class="col-md-6 align-self-center my-3 text-center-sm"  data-aos="fade-down" data-aos-duration="1500">
                     <p class="text-muted text-uppercase font-weight-bold">free some cost</p>
                     <h2>Save cost for you and family</h2>
                     <p class="lead text-gray">Tellus lacus morbi sagittis lacus in. Amet nisl at mauris enim accumsan
@@ -169,7 +169,7 @@
     <section class="my-5 py-0 py-md-5">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 align-self-center my-3 order-1 order-md-0 text-center-sm" data-aos="fade-right" data-aos-duration="1000">
+                <div class="col-md-6 align-self-center my-3 order-1 order-md-0 text-center-sm" data-aos="fade-down" data-aos-duration="750">
                     <p class="text-muted text-uppercase font-weight-bold">Use anytime</p>
                     <h2>Use anytime when you need</h2>
                     <p class="lead text-gray">Tellus lacus morbi sagittis lacus in. Amet nisl at mauris enim accumsan
@@ -184,7 +184,7 @@
                         </svg>
                     </a>
                 </div>
-                <div class="col-md-6 px-4 align-self-center my-3 order-0 order-md-1" data-aos="fade-left" data-aos-duration="1000">
+                <div class="col-md-6 px-4 align-self-center my-3 order-0 order-md-1" data-aos="fade-up" data-aos-duration="1500">
                     <img src="assets/img/Illustrator3.png" class="img-fluid" alt="">
                 </div>
             </div>
@@ -205,7 +205,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4 text-center my-3" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="500">
+                <div class="col-md-4 text-center my-3" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="750">
                     <svg width="64" height="64" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <circle cx="32" cy="32" r="32" fill="#FF8600" fill-opacity="0.1" />
                         <path
@@ -215,7 +215,7 @@
                     <h4 class="mt-3">Cross Platform</h4>
                         <p class="text-gray p-17">Elit esse cillum dolore eu fugiat nulla pariatur</p>
                 </div>
-                <div class="col-md-4 text-center my-3" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="1000">
+                <div class="col-md-4 text-center my-3" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="1500">
                     <svg width="64" height="64" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <circle cx="32" cy="32" r="32" fill="#E2598B" fill-opacity="0.1" />
                         <g clip-path="url(#clip0)">
@@ -232,7 +232,7 @@
                     <h4 class="mt-3">Cloud Server</h4>
                         <p class="text-gray p-17">Elit esse cillum dolore eu fugiat nulla pariatur</p>
                 </div>
-                <div class="col-md-4 text-center my-3" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="1500">
+                <div class="col-md-4 text-center my-3" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="2200">
                     <svg width="64" height="64" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <circle cx="32" cy="32" r="32" fill="#4D12EE" fill-opacity="0.1" />
                         <path
@@ -250,7 +250,7 @@
         <div class="container pt-5 pt-md-0">
             <h2 class="text-center mb-2 mb-md-5">Choose your flexible plan.</h2>
             <div class="row pt-2 pt-md-5 ml-md-5 text-center-md">
-                <div class="col-md-4 my-5 my-md-2 text-center-sm" data-aos="zoom-in" data-aos-duration="500">
+                <div class="col-md-4 my-5 my-md-2 text-center-sm" data-aos="zoom-in" data-aos-duration="750">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M20 6H17V4C17 2.89 16.11 2 15 2H9C7.89 2 7 2.89 7 4V6H4C2.89 6 2 6.89 2 8V19C2 20.11 2.89 21 4 21H20C21.11 21 22 20.11 22 19V8C22 6.89 21.11 6 20 6ZM9 4H15V6H9V4ZM20 19H4V17H20V19ZM20 14H4V8H7V10H9V8H15V10H17V8H20V14Z"
@@ -297,7 +297,7 @@
                     </a>
                 </div>
 
-                <div class="col-md-4 my-5 my-md-2 text-center-sm" data-aos="zoom-in" data-aos-duration="1000">
+                <div class="col-md-4 my-5 my-md-2 text-center-sm" data-aos="zoom-in" data-aos-duration="1500">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M20 6.00004H17.82C17.93 5.69004 18 5.35004 18 5.00004C18.0011 4.35486 17.7939 3.72657 17.4092 3.20863C17.0245 2.69069 16.4829 2.31077 15.8649 2.12538C15.2469 1.93999 14.5856 1.95903 13.9794 2.17969C13.3731 2.40034 12.8542 2.81081 12.5 3.35004L12 4.02004L11.5 3.34004C10.96 2.54004 10.05 2.00004 9 2.00004C7.34 2.00004 6 3.34004 6 5.00004C6 5.35004 6.07 5.69004 6.18 6.00004H4C2.89 6.00004 2.01 6.89004 2.01 8.00004L2 19C2 20.11 2.89 21 4 21H20C21.11 21 22 20.11 22 19V8.00004C22 6.89004 21.11 6.00004 20 6.00004ZM15 4.00004C15.55 4.00004 16 4.45004 16 5.00004C16 5.55004 15.55 6.00004 15 6.00004C14.45 6.00004 14 5.55004 14 5.00004C14 4.45004 14.45 4.00004 15 4.00004ZM9 4.00004C9.55 4.00004 10 4.45004 10 5.00004C10 5.55004 9.55 6.00004 9 6.00004C8.45 6.00004 8 5.55004 8 5.00004C8 4.45004 8.45 4.00004 9 4.00004ZM20 19H4V17H20V19ZM20 14H4V8.00004H9.08L7 10.83L8.62 12L12 7.40004L15.38 12L17 10.83L14.92 8.00004H20V14Z"
@@ -344,7 +344,7 @@
                     </a>
                 </div>
 
-                <div class="col-md-4 my-5 my-md-2 text-center-sm" data-aos="zoom-in" data-aos-duration="1500">
+                <div class="col-md-4 my-5 my-md-2 text-center-sm" data-aos="zoom-in" data-aos-duration="2200">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M20 2H4C2.89 2 2 2.89 2 4V15C2 16.11 2.89 17 4 17H8V22L12 20L16 22V17H20C21.11 17 22 16.11 22 15V4C22 2.89 21.11 2 20 2ZM20 15H4V13H20V15ZM20 10H4V5C4 4.45 4.45 4 5 4H19C19.55 4 20 4.45 20 5V10Z"
@@ -395,13 +395,12 @@
     </section>
 
     <section class="my-3 my-md-5 pb-2 pb-md-5">
-        <h1 class="text-center pt-3 pt-md-5 pb-3 pb-md-5" data-aos="zoom-in-up" data-aos-duration="1000">We have millions of<br> best wishers</h1>
+        <h1 class="text-center pt-3 pt-md-5 pb-3 pb-md-5" data-aos="zoom-in-up" data-aos-duration="750">We have millions of<br> best wishers</h1>
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div class="d-flex justify-content-center">
-                        <div class="col-md-3 my-4 mx-3">
+                        <div class="col-lg-3 my-4 mx-3">
                             <svg width="300" height="10" viewBox="0 0 350 10" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path d="M0 10C0 4.47715 4.47715 0 10 0H340C345.523 0 350 4.47715 350 10H0Z"
@@ -419,7 +418,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-3 my-4 mx-3">
+                        <div class="col-lg-3 my-4 mx-3">
                             <svg width="300" height="10" viewBox="0 0 350 10" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path d="M0 10C0 4.47715 4.47715 0 10 0H340C345.523 0 350 4.47715 350 10H0Z"
@@ -437,7 +436,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-3 my-4 mx-3">
+                        <div class="col-lg-3 my-4 mx-3">
                             <svg width="300" height="10" viewBox="0 0 350 10" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path d="M0 10C0 4.47715 4.47715 0 10 0H340C345.523 0 350 4.47715 350 10H0Z"
@@ -459,7 +458,7 @@
                 </div>
                 <div class="carousel-item">
                     <div class="d-flex justify-content-center">
-                        <div class="col-md-3 my-4 mx-3">
+                        <div class="col-lg-3 my-4 mx-3">
                             <svg width="300" height="10" viewBox="0 0 350 10" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path d="M0 10C0 4.47715 4.47715 0 10 0H340C345.523 0 350 4.47715 350 10V10H0V10Z"
@@ -477,7 +476,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-3 my-4 mx-3">
+                        <div class="col-lg-3 my-4 mx-3">
                             <svg width="300" height="10" viewBox="0 0 350 10" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path d="M0 10C0 4.47715 4.47715 0 10 0H340C345.523 0 350 4.47715 350 10V10H0V10Z"
@@ -495,7 +494,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-3 my-4 mx-3">
+                        <div class="col-lg-3 my-4 mx-3">
                             <svg width="300" height="10" viewBox="0 0 350 10" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path d="M0 10C0 4.47715 4.47715 0 10 0H340C345.523 0 350 4.47715 350 10H0Z"
